[gd_scene load_steps=3 format=3 uid="uid://buc5yqwipggd7"]

[ext_resource type="Script" path="res://particles.gd" id="1_leaxu"]
[ext_resource type="PackedScene" uid="uid://ci2t7q2plpyvs" path="res://Player/player.tscn" id="2_ut4uh"]

[node name="particles" type="Node2D"]
script = ExtResource("1_leaxu")

[node name="Player" parent="." instance=ExtResource("2_ut4uh")]
position = Vector2(568, 327)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/Camera2D"]
z_index = 20
position = Vector2(-16, -302.082)
scale = Vector2(1, 0.896387)
amount = 10
lifetime = 1.17
speed_scale = 1.5
emission_shape = 3
emission_rect_extents = Vector2(580, 1)
radial_accel_min = 20.0
radial_accel_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(1, 0.882353, 0.101961, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Player/Camera2D"]
z_index = 20
position = Vector2(-16, -302.082)
scale = Vector2(1, 0.896387)
emitting = false
amount = 100
lifetime = 1.17
speed_scale = 1.5
emission_shape = 3
emission_rect_extents = Vector2(580, 1)
radial_accel_min = 20.0
radial_accel_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(1, 0.882353, 0.101961, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
